--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <p class='is-header is-revealing'>Academia Sinica, Taiwan</p>
                         <a class='is-header is-revealing' href="mailto:yaochihlee@gmail.com">yaochihlee@gmail.com</a>
                         <p class='p-large'></p>
-                        <a class="btn-solid-lg is-header is-revealing" href="files/YAO_CHIH_LEE_CV.pdf"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
+                        <a class="btn-solid-lg is-header is-revealing" href="https://drive.google.com/file/d/13Ow6E13wDmxZLS0jpVPm-2RPh_72eb7K/view?usp=sharing"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://github.com/yaochih"><i class="fab fa-github"></i>Github</a>
                     </div> <!-- end of text-container -->
