--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                                 <p><b>Deep3D Stabilizer</b></p>
                                 <p>CVPR 2021</p>
                                 <p><small>3D Video Stabilization with Depth Estimation by CNN-based Optimization</small></p>
-                                <a class="btn-solid-lg" href="#your-link"><i class="fab fas fa-globe-asia"></i> Project Page</a>
-                                <a class="btn-solid-lg" href="#your-link"><i class="fab fas fa-file-alt"></i> Paper</a>
+                                <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer-io/"><i class="fab fas fa-globe-asia"></i> Project Page</a>
+                                <a class="btn-solid-lg" href="https://drive.google.com/file/d/1vTalKtMz2VEowUg0Cb7nW3pzQhUWDCLA/view?usp=sharing"><i class="fab fas fa-file-alt"></i> Paper</a>
                                 <a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>
                             </div>
                         </div>
