--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <p class='right-info'>Taipei, Taiwan</p>
                         <p><b>Institute of Information Science, Academia Sinica</b></p>
                         <p class='right-info'>Sep. 2020 ~ present</p>
-                        <p><i>Research Assitant</i></p>
+                        <p><i>Research Assistant</i></p>
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <p class='right-info'>Taipei, Taiwan</p>
@@ -205,13 +205,13 @@
                         <p class='right-info'>Taipei, Taiwan</p>
                         <p><b>imLab @ NTU</b></p>
                         <p class='right-info'>Sep. 2020 ~ present</p>
-                        <p><i>Graduate Research Assitant</i></p>
+                        <p><i>Graduate Research Assistant</i></p>
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <p class='right-info'>Hsinchu, Taiwan</p>
                         <p><b>Covis Lab @ NCTU</b></p>
                         <p class='right-info'>Aug. 2016 ~ Jun. 2018</p>
-                        <p><i>Undergraduate Research Assitant</i></p>
+                        <p><i>Undergraduate Research Assistant</i></p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
