--- a/index.html
+++ b/index.html
@@ -190,25 +190,25 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Experiences</h1>
-                    <div class="text-container">
+                    <div class="block-container">
                         <p class='right-info'>Taipei, Taiwan</p>
                         <p><b>Institute of Information Science, Academia Sinica</b></p>
                         <p class='right-info'>Sep. 2020 ~ present</p>
                         <p><i>Research Assitant</i></p>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
+                    <div class="block-container">
                         <p class='right-info'>Taipei, Taiwan</p>
                         <p><b>Human-AI Research Project</b></p>
                         <p class='right-info'>Summer 2020</p>
                         <p><i>Full Stack Developer</i></p>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
+                    <div class="block-container">
                         <p class='right-info'>Taipei, Taiwan</p>
                         <p><b>imLab @ NTU</b></p>
                         <p class='right-info'>Sep. 2020 ~ present</p>
                         <p><i>Graduate Research Assitant</i></p>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
+                    <div class="block-container">
                         <p class='right-info'>Hsinchu, Taiwan</p>
                         <p><b>Covis Lab @ NCTU</b></p>
                         <p class='right-info'>Aug. 2016 ~ Jun. 2018</p>
