--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Education</h1>
-                    <div class="text-container">
-                        <p class='right-info'>Taipei, Taiwan</p>
-                        <p><b>National Taiwan University</b></p>
-                        <p class='right-info'>Sep. 2018 ~ Jul. 2020</p>
-                        <p><i>M.S. Computer Science and Information Engineering</i></p>
-                        <p>GPA: 4.24 / 4.3</p>
+                    <div class="block-container">
+                        <div class='row'>
+                            <p class='col-lg-12'><b>M.S. Computer Science and Information Engineering</b></p>
+                            <p class='col-lg-6'>National Taiwan University</p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jul. 2020 Taipei, Taiwan</p>
+                            <p class='col-lg-12'>GPA: 4.24 / 4.3</p>
+                        </div>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
-                        <p class='right-info'>Hsinchu, Taiwan</p>
-                        <p><b>National Chiao Tung University</b> (Current National Yang Ming Chiao Tung University)</p>
-                        <p class='right-info'>Sep. 2016 ~ Jun. 2020</p>
-                        <p><i>B.S. Computer Science</i></p>
-                        <p>GPA: 4.14 / 4.3 (major 4.2 / 4.3)</p>
+                    <div class="block-container">
+                        <div class='row'>
+                            <p class='col-lg-12'><b>B.S. Computer Science</b></p>
+                            <p class='col-lg-6'>National Chiao Tung University</p><p class='col-lg-6 right-info'>Sep. 2014 ~ Jun. 2018 Hsinchu, Taiwan</p>
+                            <p class='col-lg-12'>GPA: 4.14 / 4.3 (major 4.2/4.3)</p>
+                        </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -190,28 +190,44 @@
                 <div class="col-lg-12">
                     <h1>Experiences</h1>
                     <div class="block-container">
-                        <p class='right-info'>Taipei, Taiwan</p>
-                        <p><b>Institute of Information Science, Academia Sinica</b></p>
-                        <p class='right-info'>Sep. 2020 ~ present</p>
-                        <p><i>Research Assistant</i></p>
+                        <div class="row">
+                            <p class='col-lg-6'><b>Institute of Information Science, Academia Sinica</b></p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
+                        </div>
+                        <div class="row">
+                            <p class='col-lg-6'><i>Research Assistant</i></p>
+                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present</p>
+                        </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
-                        <p class='right-info'>Taipei, Taiwan</p>
-                        <p><b>Human-AI Research Project</b></p>
-                        <p class='right-info'>Summer 2020</p>
-                        <p><i>Full Stack Developer</i></p>
+                        <div class="row">
+                            <p class='col-lg-6'><b>Human-AI Research Project</b></p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
+                        </div>
+                        <div class="row">
+                            <p class='col-lg-6'><i>Full Stack Developer</i></p>
+                            <p class='col-lg-6 right-info'>Summer 2020</p>
+                        </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
-                        <p class='right-info'>Taipei, Taiwan</p>
-                        <p><b>imLab @ NTU</b></p>
-                        <p class='right-info'>Sep. 2020 ~ present</p>
-                        <p><i>Graduate Research Assistant</i></p>
+                        <div class='row'>
+                            <p class='col-lg-6'><b>imLab @ NTU</b></p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
+                        </div>
+                        <div class='row'>
+                            <p class='col-lg-6'><i>Graduate Research Assistant</i></p>
+                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present</p>
+                        </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
-                        <p class='right-info'>Hsinchu, Taiwan</p>
-                        <p><b>Covis Lab @ NCTU</b></p>
-                        <p class='right-info'>Aug. 2016 ~ Jun. 2018</p>
-                        <p><i>Undergraduate Research Assistant</i></p>
+                        <div class='row'>
+                            <p class='col-lg-6'><b>Covis Lab @ NCTU</b></p>
+                            <p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
+                        </div>
+                        <div class='row'>
+                            <p class='col-lg-6'><i>Undergraduate Research Assistant</i></p>
+                            <p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018</p>
+                        </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
