--- a/index.html
+++ b/index.html
@@ -191,42 +191,30 @@
                     <h1>Experiences</h1>
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Institute of Information Science, Academia Sinica</b></p>
-                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
-                        </div>
-                        <div class="row">
-                            <p class='col-lg-6'><i>Research Assistant</i></p>
-                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present</p>
+                            <p class='col-lg-12'><b>Research Assistant</b></p>
+                            <p class='col-lg-6'>Institute of Information Science, Academia Sinica</p>
+                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Human-AI Research Project</b></p>
-                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
+                            <p class='col-lg-12'><b>Full Stack Developer</b></p>
+                            <p class='col-lg-6'>Human-AI Research Project</p>
+                            <p class='col-lg-6 right-info'>Summer, 2020 Taipei, Taiwan</p>
                         </div>
+                    </div> <!-- end of text-container -->
+                    <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><i>Full Stack Developer</i></p>
-                            <p class='col-lg-6 right-info'>Summer 2020</p>
+                            <p class='col-lg-12'><b>Graduate Research Assistant</b></p>
+                            <p class='col-lg-6'>Image and Vision Lab @ NTU</p>
+                            <p class='col-lg-6 right-info'>Sep. 2018 ~ Jun. 2020 Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
-                        <div class='row'>
-                            <p class='col-lg-6'><b>imLab @ NTU</b></p>
-                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
-                        </div>
-                        <div class='row'>
-                            <p class='col-lg-6'><i>Graduate Research Assistant</i></p>
-                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present</p>
-                        </div>
-                    </div> <!-- end of text-container -->
-                    <div class="block-container">
-                        <div class='row'>
-                            <p class='col-lg-6'><b>Covis Lab @ NCTU</b></p>
-                            <p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
-                        </div>
-                        <div class='row'>
-                            <p class='col-lg-6'><i>Undergraduate Research Assistant</i></p>
-                            <p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018</p>
+                        <div class="row">
+                            <p class='col-lg-12'><b>Undergraduate Research Assistant</b></p>
+                            <p class='col-lg-6'>Collaborative Vision Lab @ NTU</p>
+                            <p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018 Hsinchu, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
