--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-12'><b>Undergraduate Research Assistant</b></p>
-                            <p class='col-lg-6'>Collaborative Vision Lab @ NTU</p>
+                            <p class='col-lg-6'>Collaborative Vision Lab @ NCTU</p>
                             <p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018 Hsinchu, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
