--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
-                            <img src='images/deep3d_cover_lite.gif'>
+                            <a href="https://youtu.be/pMluFVA7NDQ"><img src='images/deep3d_cover_lite.gif'></a>
                         </div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-vertical-center">
                             <div>
