--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                     <h1>Education</h1>
                     <div class="block-container">
                         <div class='row'>
-                            <p class='col-lg-12'><b>M.S. Computer Science and Information Engineering</b></p>
+                            <p class='col-lg-12'><b>M.S. in Computer Science and Information Engineering</b></p>
                             <p class='col-lg-6'>National Taiwan University</p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jul. 2020 Taipei, Taiwan</p>
                             <p class='col-lg-12'>GPA: 4.24 / 4.3</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class='row'>
-                            <p class='col-lg-12'><b>B.S. Computer Science</b></p>
+                            <p class='col-lg-12'><b>B.S. in Computer Science</b></p>
                             <p class='col-lg-6'>National Chiao Tung University (Current National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Sep. 2014 ~ Jun. 2018 Hsinchu, Taiwan</p>
                             <p class='col-lg-12'>GPA: 4.14 / 4.3 (major 4.2/4.3)</p>
                         </div>
