--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project Page</a>
                                 <a class="btn-solid-lg" href="https://drive.google.com/file/d/1vTalKtMz2VEowUg0Cb7nW3pzQhUWDCLA/view?usp=sharing"><i class="fab fas fa-file-alt"></i> Paper</a>
                                 <a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>
-				<a class='btn-solid-lf' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>awesome-video-stabilization</a>
+				<a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>awesome-video-stabilization</a>
                             </div>
                         </div>
                     </div>
