--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                         <ul>
                             <li><p><u>Yao-Chih Lee</u>, Kuan-Wei Tseng, Yu-Ta Chen, Chien-Cheng Chen, Chu-Song Chen, and Yi-Ping Hung. <strong>3D Video Stabilization with Depth Estimation by CNN-based Optimization</strong>. In <i>CVPR</i>, 2021.<p></li>
                             <li><p>Hau Chu, Jia-Hong Lee, <u>Yao-Chih Lee</u>, Ching-Hsien Hsu, Jia-Da Li, and Chu-Song Chen. <strong>Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation</strong>. In <i>CVPRW</i>, 2021.</p></li>
-                        </ul>
+			    <li>><p>Yu-Ta Chen, Kuan-Wei Tseng, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and Yi-Ping Hung. <strong>PixStabNet: Fast Multi-Scale Deep Online Video Stabilization with Pixel-based Warping</strong>. In <i>ICIP}</i>, 2021.</p></li>
+			</ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
