--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
                     <h1>Education</h1>
                     <div class="block-container">
                         <div class='row'>
-                            <p class='col-lg-12'><b>M.S. in Computer Science and Information Engineering</b></p>
-                            <p class='col-lg-6'>National Taiwan University</p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jul. 2020 Taipei, Taiwan</p>
+                            <p class='col-lg-6'><b>M.S. in Computer Science and Information Engineering</b></p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jul. 2020</p>
+                            <p class='col-lg-6'>National Taiwan University</p><p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                             <p class='col-lg-12'>GPA: 4.24 / 4.3</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class='row'>
-                            <p class='col-lg-12'><b>B.S. in Computer Science</b></p>
-                            <p class='col-lg-6'>National Chiao Tung University (Current National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Sep. 2014 ~ Jun. 2018 Hsinchu, Taiwan</p>
+                            <p class='col-lg-6'><b>B.S. in Computer Science</b></p><p class='col-lg-6 right-info'>Sep. 2014 ~ Jun. 2018</p>
+                            <p class='col-lg-6'>National Chiao Tung University (Current National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
                             <p class='col-lg-12'>GPA: 4.14 / 4.3 (major 4.2/4.3)</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -180,7 +180,9 @@
                             <li><p>Hau Chu, Jia-Hong Lee, <u>Yao-Chih Lee</u>, Ching-Hsien Hsu, Jia-Da Li, and Chu-Song Chen. 
 				<br><strong>Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation</strong>. 
 				<br>In <i>CVPRW</i>, 2021.</p></li>
-			    <li><p>Yu-Ta Chen, Kuan-Wei Tseng, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and Yi-Ping Hung. <strong>PixStabNet: Fast Multi-Scale Deep Online Video Stabilization with Pixel-based Warping</strong>. In <i>ICIP</i>, 2021.</p></li>
+			    <li><p>Yu-Ta Chen, Kuan-Wei Tseng, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and Yi-Ping Hung. 
+				<br><strong>PixStabNet: Fast Multi-Scale Deep Online Video Stabilization with Pixel-based Warping</strong>. 
+				<br>In <i>ICIP</i>, 2021.</p></li>
 			</ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -196,30 +198,30 @@
                     <h1>Experiences</h1>
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-12'><b>Research Assistant</b></p>
+                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 ~ current</p>
                             <p class='col-lg-6'>Institute of Information Science, Academia Sinica</p>
-                            <p class='col-lg-6 right-info'>Sep. 2020 ~ present Taipei, Taiwan</p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-12'><b>Full Stack Developer</b></p>
+                            <p class='col-lg-6'><b>Full Stack Developer</b></p><p class='col-lg-6 right-info'>Summer, 2020</p>
                             <p class='col-lg-6'>Human-AI Research Project</p>
-                            <p class='col-lg-6 right-info'>Summer, 2020 Taipei, Taiwan</p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-12'><b>Graduate Research Assistant</b></p>
+                            <p class='col-lg-6'><b>Graduate Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jun. 2020</p>
                             <p class='col-lg-6'>Image and Vision Lab @ NTU</p>
-                            <p class='col-lg-6 right-info'>Sep. 2018 ~ Jun. 2020 Taipei, Taiwan</p>
+                            <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-12'><b>Undergraduate Research Assistant</b></p>
+                            <p class='col-lg-6'><b>Undergraduate Research Assistant</b></p><p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018</p>
                             <p class='col-lg-6'>Collaborative Vision Lab @ NCTU</p>
-                            <p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018 Hsinchu, Taiwan</p>
+                            <p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
