--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Full Stack Developer</b></p><p class='col-lg-6 right-info'>Summer, 2020</p>
-                            <p class='col-lg-6'>Human-AI Research Project</p>
+                            <p class='col-lg-6'>Human-AI Interaction Research Project</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
