--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 <p><small>3D Video Stabilization with Depth Estimation by CNN-based Optimization</small></p>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
                                 <a class="btn-solid-lg" href="https://openaccess.thecvf.com/content/CVPR2021/html/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.html"><i class="fab fas fa-file-alt"></i> Paper</a>
-                                <a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>
+                                <!---<a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>--->
 				<a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>Awesome video stabilization</a>
                             </div>
                         </div>
