--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="block-container">
                         <div class='row'>
                             <p class='col-lg-8'><b>B.S. in Computer Science</b></p><p class='col-lg-4 right-info'>Sep. 2014 ~ Jun. 2018</p>
-                            <p class='col-lg-6'>National Chiao Tung University (Current National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
+                            <p class='col-lg-6'>National Chiao Tung University (Now National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
                             <p class='col-lg-12'>GPA: 4.14 / 4.3 (major 4.2/4.3)</p>
                         </div>
                     </div> <!-- end of text-container -->
