--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p class='is-header is-revealing'>Academia Sinica, Taiwan</p>
                         <a class='is-header is-revealing' href="mailto:yaochihlee@gmail.com">yaochihlee@gmail.com</a>
                         <p class='p-large'></p>
-                        <a class="btn-solid-lg is-header is-revealing" href="https://yaochih.github.io/files/Yao_Chih_Lee_CV.pdf"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
+                        <a class="btn-solid-lg is-header is-revealing" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://github.com/yaochih"><i class="fab fa-github"></i>Github</a>
                     </div> <!-- end of text-container -->
