--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="">
+    <link rel="icon" href="images/cube-solid.svg">
 </head>
 <body data-spy="scroll" data-target=".fixed-top" class='has-animations'>
     
@@ -241,7 +241,7 @@
                         </div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-vertical-center">
                             <div>
-                                <p><b>Deep3D Stabilizer</b></p>
+                                <p class='h5'><b>Deep3D Stabilizer</b></p>
                                 <p>CVPR 2021</p>
                                 <p><small>3D Video Stabilization with Depth Estimation by CNN-based Optimization</small></p>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
@@ -266,7 +266,6 @@
             <div class="row">
                 <div class="col-lg-12">
                     
-                    </div> <!-- end of social-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -278,14 +277,7 @@
     <div class="copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <ul class="list-unstyled li-space-lg p-small">
-                        <li><a href="article.html">Article Details</a></li>
-                        <li><a href="terms.html">Terms & Conditions</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                    </ul>
-                </div> <!-- end of col -->
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <p class="p-small statement">Copyright © <a href="#">Yao-Chih-Lee</a>&nbsp&nbsp Template credit: <a href='https://onepagelove.com/pavo'>Pavo</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
