--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="image-container">
-                        <!--<img class="img-fluid" src="" alt="alternative">-->
+			<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 50%; margin-left: 25%; margin-right: 25%;">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
