--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <h1>Experiences</h1>
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 ~ current</p>
+                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 ~ present</p>
                             <p class='col-lg-6'>Institute of Information Science, Academia Sinica</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
