--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Webpage Title -->
     <title>YAO-CHIH LEE</title>
-    
+	 
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -147,17 +147,23 @@
                 <div class="col-lg-12">
                     <h1>Education</h1>
                     <div class="block-container">
-                        <div class='row'>
-                            <p class='col-lg-8'><b>M.S. in Computer Science and Information Engineering</b></p><p class='col-lg-4 right-info'>Sep. 2018 ~ Jul. 2020</p>
-                            <p class='col-lg-6'>National Taiwan University</p><p class='col-lg-6 right-info'>Taipei, Taiwan</p>
-                            <p class='col-lg-12'>GPA: 4.24 / 4.3</p>
+						<div class='row'>
+                            <p class='col-lg-8'><b>M.S. in Computer Science and Information Engineering</b></p><p class='col-lg-4 right-info'>Sep. 2018 - Jun. 2020</p>
+                            <p class='col-lg-10'>National Taiwan University</p><p class='col-lg-2 right-info'>Taipei, Taiwan</p>
+							<ul>
+								<li><p class='col-lg-12' style='line-height: 1rem'>GPA:  4.24 / 4.3</p></li>
+								<li><p class='col-lg-12' style='line-height: 1rem'>Rank: 7th / 132</p></li>
+							</ul>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class='row'>
-                            <p class='col-lg-8'><b>B.S. in Computer Science</b></p><p class='col-lg-4 right-info'>Sep. 2014 ~ Jun. 2018</p>
-                            <p class='col-lg-6'>National Chiao Tung University (Now National Yang Ming Chiao Tung University)</p><p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
-                            <p class='col-lg-12'>GPA: 4.14 / 4.3 (major 4.2/4.3)</p>
+                            <p class='col-lg-8'><b>B.S. in Computer Science</b></p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
+                            <p class='col-lg-10'>National Chiao Tung University (Now National Yang Ming Chiao Tung University)</p><p class='col-lg-2 right-info'>Hsinchu, Taiwan</p>
+							<ul>
+								<li><p class='col-lg-12' style='line-height: 1rem'>GPA:  4.14 / 4.3 (major 4.2/4.3)</p></li>
+								<li><p class='col-lg-12' style='line-height: 1rem'>Rank: 1st / 50</p></li>
+							</ul>
                         </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -175,15 +181,12 @@
                     <div class="text-container">
                         <ul>
                             <li><p><u>Yao-Chih Lee</u>, Kuan-Wei Tseng, Yu-Ta Chen, Chien-Cheng Chen, Chu-Song Chen, and Yi-Ping Hung.
-				<br><strong>3D Video Stabilization with Depth Estimation by CNN-based Optimization</strong>.
-				<br>In <i>CVPR</i>, 2021.</p></li>
+								<br><strong>3D Video Stabilization with Depth Estimation by CNN-based Optimization</strong>.<br>In <i>CVPR</i>, 2021.</p></li>
                             <li><p>Hau Chu, Jia-Hong Lee, <u>Yao-Chih Lee</u>, Ching-Hsien Hsu, Jia-Da Li, and Chu-Song Chen. 
-				<br><strong>Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation</strong>. 
-				<br>In <i>CVPRW</i>, 2021.</p></li>
-			    <li><p>Yu-Ta Chen, Kuan-Wei Tseng, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and Yi-Ping Hung. 
-				<br><strong>PixStabNet: Fast Multi-Scale Deep Online Video Stabilization with Pixel-based Warping</strong>. 
-				<br>In <i>ICIP</i>, 2021.</p></li>
-			</ul>
+								<br><strong>Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation</strong>. <br>In <i>CVPRW</i>, 2021.</p></li>
+							<li><p>Yu-Ta Chen, Kuan-Wei Tseng, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and Yi-Ping Hung. 
+								<br><strong>PixStabNet: Fast Multi-Scale Deep Online Video Stabilization with Pixel-based Warping</strong>. <br>In <i>ICIP</i>, 2021.</p></li>
+						</ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -198,28 +201,28 @@
                     <h1>Experiences</h1>
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 ~ current</p>
+                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 - present</p>
                             <p class='col-lg-6'>Institute of Information Science, Academia Sinica</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Summer, 2020</p>
-                            <p class='col-lg-6'>Human-AI Interaction Research Project</p>
+                            <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Jul, 2020 - Aug, 2020</p>
+                            <p class='col-lg-6'>Interdisciplinary Human-AI Interaction Research Project</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Graduate Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2018 ~ Jun. 2020</p>
+                            <p class='col-lg-6'><b>Graduate Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2018 - Jun. 2020</p>
                             <p class='col-lg-6'>Image and Vision Lab @ NTU</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-6'><b>Undergraduate Research Assistant</b></p><p class='col-lg-6 right-info'>Aug. 2016 ~ Jun. 2018</p>
+                            <p class='col-lg-6'><b>Undergraduate Research Assistant</b></p><p class='col-lg-6 right-info'>Aug. 2016 - Jun. 2018</p>
                             <p class='col-lg-6'>Collaborative Vision Lab @ NCTU</p>
                             <p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
                         </div>
@@ -233,25 +236,85 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Projects</h1>
+                    <h1>Selected Projects</h1>
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
-                            <a href="https://youtu.be/pMluFVA7NDQ"><img src='images/deep3d_cover_lite.gif'></a>
+                            <a href="https://youtu.be/pMluFVA7NDQ"><img style="max-width: 100%; height: auto;" src='images/deep3d_cover_lite.gif'></a>
                         </div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-vertical-center">
                             <div>
                                 <p class='h5'><b>Deep3D Stabilizer</b></p>
-                                <p>CVPR 2021</p>
-                                <p><small>3D Video Stabilization with Depth Estimation by CNN-based Optimization</small></p>
+								<p><small>CVPR 2021, 3D Video Stabilization with Depth Estimation by CNN-based Optimization</small></p>
+								<p style="text-align: justify;"><small>
+								We propose Deep3D Stabilizer, the first 3D depth-based learning method for video stabilization. Our approach requires no data for pre-training but stabilizes the input video via 3D reconstruction directly. Unlike most one-size-fits-all learning-based methods, our smoothing algorithm allows users to manipulate the stability of a video efficiently.
+								</small></p>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
                                 <a class="btn-solid-lg" href="https://openaccess.thecvf.com/content/CVPR2021/html/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.html"><i class="fab fas fa-file-alt"></i> Paper</a>
                                 <!---<a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>--->
-				<a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>Awesome video stabilization</a>
+								<a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>Awesome video stabilization</a>
                             </div>
                         </div>
                     </div>
                     <hr/>
+					<div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="max-width: 100%; height: auto;" src='images/pixstabnet-pipeline.png'>
+						</div> <!-- end of text-container -->
+                        <div class="col-lg-8 cell-left">
+                            <div>
+                                <p class='h5'><b>PixStabNet</b></p>
+								<p><small>ICIP 2021, PixStabNet: Fast Deep Online Video Stabilization</small></p>
+								<p style="text-align: justify;"><small>We propose a multi-scale convolutional neural network  which stabilizes each unstable frame in real time without using future frames. The proposed PixStabNet estimates a pixel-based warping in a coarse-to-fine manner to transform large displacement first and refine the detail in pixel level. The model produces more stable video than other state-of-the art online methods and achieves the fastest speepd (54.6 fps).</small></p>
+                                <a class="btn-solid-lg" href="https://ieeexplore.ieee.org/document/9506801"><i class="fab fas fa-file-alt"></i> Paper</a>
+                            </div>
+                        </div>
+					</div>
+					<hr/>
+					<div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="max-width: 100%; height: auto;" src='images/part-aware-human-pose-cvprw-2021.png'>
+						</div> <!-- end of text-container -->
+                        <div class="col-lg-8 cell-left">
+                            <div>
+                                <p class='h5'><b>Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</b></p>
+								<p><small>CVPR Workshop 2021</small></p>
+								<p style="text-align: justify;"><small>We introduce an approach for multi-human 3D pose estimation and tracking based on calibrated multi-view. The proposed part-aware measurement for 2D-3D association and a filter can cope with 2D outliers during reconstruction. Our approach is efficient and effective comparing to state-of-the-art methods; it achieves competitive results on two benchmarks: 96.8% on Campus and 97.4% on Shelf.</small></p>
+                                <a class="btn-solid-lg" href="https://arxiv.org/abs/2106.11589"><i class="fab fas fa-file-alt"></i> Paper</a>
+                            </div>
+                        </div>
+					</div>
+					<hr/>
+					<div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="max-width: 100%; height: auto;" src='images/foveated-rendering.png'>
+						</div> <!-- end of text-container -->
+                        <div class="col-lg-8 cell-left">
+                            <div>
+                                <p class='h5'><b>Foveated Rendering in AR</b></p>
+								<p><small>Graduate-level Coursework in Advanced Interactive Technologies</small></p>
+								<p style="text-align: justify;"><small>Augmented reality (AR) is to augment virtual information into real world. However, too many virtual information may make user feel dizzy, especially in some real scenes that are complex. Thus, we apply foveated rendering which provides less detail in peripheral region on augmented reality devices. We expect that it may not only reduce the complexity of view but also potentially improve the performance of rendering.
+								</small></p>
+                            </div>
+                        </div>
+					</div>
+					<hr/>
+					<div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="max-width: 100%; height: auto;" src='images/undergraduate-uav.png'>
+						</div> <!-- end of text-container -->
+                        <div class="col-lg-8 cell-left">
+                            <div>
+                                <p class='h5'><b>An UAV Autopilot System for Sports Player Tracking</b></p>
+								<p><small>Undergraduate Project, Conference of Taiwan Human-Computer Interaction (TAICHI) 2017</small></p>
+								<p style="text-align: justify;"><small>
+								We proposed an UAV (Unmanned Aerial Vehicle) autopilot system based on character recognition, human detection and human tracking technologies to track sports player automatically. It reduces human labor to decrease the cost, providing a safer environment for players to compete and a better view angle for broadcast. Experiments have shown the proposed system can track human well and is stable even when losing sports players number or facing pedestrian disturbance.
+								</small></p>
+                            </div>
+                        </div>
+					</div>
+					<hr/>
+
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
