--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2020 - present</p>
-                            <p class='col-lg-6'>Institute of Information Science, Academia Sinica</p>
+                            <p class='col-lg-6'>AI Application and Integration Lab, Academia Sinica</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
