--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                         <p class='is-header is-revealing'>Academia Sinica, Taiwan</p>
                         <a class='is-header is-revealing' href="mailto:yaochihlee@gmail.com">yaochihlee@gmail.com</a>-->
                         <p style='text-align: justify; line-height: 180%; color: black;'>
-                        I am a research assistant at <a href="">Academia Sinica</a> advised by Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>.
-                        I received my M.S from National Taiwan University advised by Prof. <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, and B.S. from National Chiao Tung University advised by Prof. <a href="">Kuan-Wen Chen</a>. My research interests lie in the fields of 3D Computer Vision, Computational Photography, and Machine Learning.
+                        I am a research assistant at <a href="https://www.sinica.edu.tw/en">Academia Sinica</a> advised by Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>.
+                        I received my M.S from <a href="https://www.ntu.edu.tw/english/">National Taiwan University</a> advised by Prof. <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, and B.S. from <a href="https://www.nycu.edu.tw/">National Chiao Tung University</a> advised by Prof. <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a>. My research interests lie in the fields of 3D Computer Vision, Computational Photography, and Machine Learning.
                         </p>
                         <br/>
-                        <a class="btn-solid-lg is-header is-revealing" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-envelope"></i> email</a>
+                        <a class="btn-solid-lg is-header is-revealing" href="mailto:yaochihlee@gmail.com"><i class="fab fas fa-envelope"></i> email</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://github.com/yaochih"><i class="fab fa-github"></i>Github</a>
@@ -279,7 +279,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-8'><b>Teaching Assistant</b></p><p class='col-lg-4 right-info'>Feb. 2021 - Jun. 2021</p>
-                            <p class='col-lg-8'>Coarse: 3D Computer Vision with Deep Learning Applications (NTU)</p>
+                            <p class='col-lg-8'>Coarse: 3D Computer Vision with Deep Learning Applications (at CSIE, NTU)</p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -300,14 +300,14 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2019 - Jan. 2020</p>
-                            <p class='col-lg-6'>Coarse: Digital Image Processing (NTU)</p>
+                            <p class='col-lg-6'>Coarse: Digital Image Processing (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2019 - Jun. 2019</p>
-                            <p class='col-lg-6'>Coarse: Probability (NTU)</p>
+                            <p class='col-lg-6'>Coarse: Probability (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -321,7 +321,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2018 - Jun. 2018</p>
-                            <p class='col-lg-6'>Coarse: Computer Vision for UAV Autopilot (NCTU)</p>
+                            <p class='col-lg-6'>Coarse: Computer Vision for UAV Autopilot (at CS, NCTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -342,7 +342,7 @@
 						</div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-left">
                             <div>
-                                <p class='h5'><b>Foveated Rendering in AR</b></p>
+                                <p class='project-title'><b>Foveated Rendering in AR</b></p>
 								<p>Graduate-level Coursework in Advanced Interactive Technologies</p>
 								<p style="text-align: justify; line-height: 160%;">Augmented reality (AR) is to augment virtual information into real world. However, too many virtual information may make user feel dizzy, especially in some real scenes that are complex. Thus, we apply foveated rendering which provides less detail in peripheral region on augmented reality devices. We expect that it may not only reduce the complexity of view but also potentially improve the performance of rendering.
 								</p>
@@ -356,7 +356,7 @@
 						</div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-left">
                             <div>
-                                <p class='h5'><b>An UAV Autopilot System for Sports Player Tracking</b></p>
+                                <p class='project-title'><b>An UAV Autopilot System for Sports Player Tracking</b></p>
 								<p>Undergraduate Project, Conference of Taiwan Human-Computer Interaction (TAICHI) 2017</p>
 								<p style="text-align: justify; line-height: 160%;">
 								We proposed an UAV (Unmanned Aerial Vehicle) autopilot system based on character recognition, human detection and human tracking technologies to track sports player automatically. It reduces human labor to decrease the cost, providing a safer environment for players to compete and a better view angle for broadcast. Experiments have shown the proposed system can track human well and is stable even when losing sports players number or facing pedestrian disturbance.
