--- a/index.html
+++ b/index.html
@@ -184,11 +184,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Publications</h1>
+			<!--
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
                             <img style="width: 100%; height: auto;" src='images/gcvd-snapshot.gif'>
-                        </div> <!-- end of text-container -->
+                        </div>
                         <div class="col-lg-8 cell-vertical-center project">
                             <div>
                                 <p class="project-title"><b>GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</b></p>
@@ -196,7 +197,7 @@
                                 <p>In submission</p>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
