--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-8'><b>Teaching Assistant</b></p><p class='col-lg-4 right-info'>Feb. 2021 - Jun. 2021</p>
-                            <p class='col-lg-8'>Coarse: 3D Computer Vision with Deep Learning Applications (at CSIE, NTU)</p>
+                            <p class='col-lg-8'>Course: 3D Computer Vision with Deep Learning Applications (at CSIE, NTU)</p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -301,14 +301,14 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2019 - Jan. 2020</p>
-                            <p class='col-lg-6'>Coarse: Digital Image Processing (at CSIE, NTU)</p>
+                            <p class='col-lg-6'>Course: Digital Image Processing (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2019 - Jun. 2019</p>
-                            <p class='col-lg-6'>Coarse: Probability (at CSIE, NTU)</p>
+                            <p class='col-lg-6'>Course: Probability (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
