--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2018 - Jun. 2018</p>
-                            <p class='col-lg-6'>Coarse: Computer Vision for UAV Autopilot (at CS, NCTU)</p>
+                            <p class='col-lg-6'>Course: Computer Vision for UAV Autopilot (at CS, NCTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
