--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="author" content="Yao-Chih Lee">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+	<meta property="og:site_name" content="Yao-Chih Lee" /> <!-- website name -->
+	<meta property="og:site" content="https://yaochih.github.io/" /> <!-- website link -->
+	<meta property="og:title" content="Yao-Chih Lee"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Personal Website" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="https://yaochih.github.io/images/website-snapshot.jpg" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+	<meta property="og:url" content="https://yaochih.github.io/" /> <!-- where do you want your post to link to -->
 
     <!-- Webpage Title -->
     <title>YAO-CHIH LEE</title>
